# visualization-lab

./: README.md  display-text.py  notes.txt  pyproject.toml  rotating-sphere.py  square-to-circle-with-mod.py
demos/: commutative_diagram.py  intent_demo.py
demos/media/Tex/: 3010c5353934ce53.tex  f26356641ddb9c61.tex
demos/media/videos/commutative_diagram/1080p60/partial_movie_files/CommutativeDiagram/: partial_movie_file_list.txt
julia-plots/: pipeline_example.jl  pipeline_example_gr.jl
media/videos/square-to-circle-with-mod/480p15/partial_movie_files/SquareToCircleWithModifications/: partial_movie_file_list.txt
media/videos/square-to-circle/480p15/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
src/intent_engine/: candidates.py  manager.py  parser_nl.py  ranking.py  types.py
